fixed broken links to client and candidate programs

--- a/app/main/templates/matchmaking_services.html
+++ b/app/main/templates/matchmaking_services.html
@@ -124,6 +124,7 @@ EliteDatingSearch offers three tiered matchmaking programs—each led by a dedic
   </h2>
   Leave us a live chat or send us a message directly to our email!
   <a href="{{ url_for ('main.static', filename='contact.html') }}"
+  	 class="btn btn-primary">Send Us An Email</a>
 </section>
 
 {% endblock %}
