fixed broken links to client and candidate programs

--- a/app/main/templates/matchmaking_services.html
+++ b/app/main/templates/matchmaking_services.html
@@ -123,7 +123,7 @@ EliteDatingSearch offers three tiered matchmaking programs—each led by a dedic
     Unsure which program is for you?
   </h2>
   Leave us a live chat or send us a message directly to our email!
-  <a href="{{ url_for ('main.static', filename='contact.html') }}"
+  <a href="{{ url_for ('contact.html') }}"
   	 class="btn btn-primary">Send Us An Email</a>
 </section>
 
