--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -42,6 +42,8 @@
       href="{{ url_for('main.static', filename='css/site.css') }}">
   <link rel="stylesheet"
   		href="{{ url_for('main.static', filename='css/navbar.css') }}">
+  <link rel="stylesheet"
+  		href="{{ url_for('main.static', filename='css/footer.css') }}">
 
   {# ---------- Extra head assets ------------------------------ #}
   {% block extra_head %}{% endblock %}
