--- a/app/main/templates/testimonials.html
+++ b/app/main/templates/testimonials.html
@@ -7,8 +7,7 @@
 {% block hero %}
 <section
   class="relative text-white bg-cover bg-center min-h-[45vh]"
-  style="background-image:url('{{ url_for('main.static',
-                                         filename='img/hero_testimonials.jpg') }}')">
+  style="background-image:url('{{ url_for('main.static', filename='img/hero_testimonials.jpg') }}')">
   <div class="absolute inset-0 bg-black/60"></div>
 
   <div class="relative flex items-center justify-center h-full px-6">
