--- a/app/main/templates/testimonials.html
+++ b/app/main/templates/testimonials.html
@@ -4,9 +4,9 @@
 {% block title %}Client Success Stories – Elite Dating Search{% endblock %}
 
 {# ---------- full-bleed hero ---------------------------------- #}
-{% block hero %}
+{% block content %}
 <section
-  class="relative text-white bg-cover bg-center min-h-[45vh]"
+  class="relative flex items-center justify-center text-white bg-cover bg-center min-h-[45vh]"
   style="background-image:url('{{ url_for('main.static', filename='img/hero_testimonials.jpg') }}')">
   <div class="absolute inset-0 bg-black/60"></div>
 
@@ -16,10 +16,8 @@
     </h1>
   </div>
 </section>
-{% endblock %}
 
 {# ---------- main content ------------------------------------- #}
-{% block content %}
 <section class="bg-[#E24767] text-white py-16 lg:py-24">
   <div class="max-w-6xl mx-auto px-6 lg:px-8">
 
